--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ SERVER_SERVLET_CONTEXT_PATH=/api/v1
 
 SPRING_APPLICATION_NAME=example
 
-KEYCLOAK_VERSION=latest
+KEYCLOAK_VERSION=23.0.7
 KEYCLOAK_PORT=8080
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASS=admin
