--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
 	<description>Spring Boot Security with Keycloak</description>
 	<properties>
 		<java.version>21</java.version>
+		<keycloak.version>23.0.7</keycloak.version>
 	</properties>
 	<dependencies>
 		<!-- Support Dependencies -->
@@ -43,6 +44,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>${keycloak.version}</version>
+		</dependency>
+
 
 		<!-- Servlet Web, JPA, DB Dependencies -->
 		<dependency>
